--- a/Glitter/backend/package.json
+++ b/Glitter/backend/package.json
@@ -113,6 +113,7 @@
     "parseurl": "^1.3.3",
     "path-to-regexp": "^0.1.7",
     "path-type": "^4.0.0",
+    "pg": "^8.9.0",
     "picocolors": "^1.0.0",
     "picomatch": "^2.3.1",
     "postcss-value-parser": "^4.2.0",
@@ -160,10 +161,10 @@
     "yaml": "^1.10.2"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "supervisor glitterServer.js"
   },
   "author": "",
   "license": "ISC",
-  "devDependencies": {},
   "description": ""
 }
